更新用户资料

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,3 +17,9 @@ section.user_info{
   h1{font-size:1.4em; letter-spacing:-1px;margin-bottom:3px;margin-top:15px}
 }
 .gravatar{float:left;max-width:50px;border-radius:50%}
+
+//users edit
+.gravatar_edit{
+  margin: 15px auto; text-align: center;
+  .gravatar{float: none;max-width:100px;}
+}
