--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,7 +16,7 @@ section.user_info{
   .gravatare{float:none;max-width:70px}
   h1{font-size:1.4em; letter-spacing:-1px;margin-bottom:3px;margin-top:15px}
 }
-.gravatar{float:left;max-width:50px;border-radius:50%}
+.gravatar{max-width:50px;border-radius:50%}
 
 //users edit
 .gravatar_edit{
